syntax = "proto3";

package users;

message UserRequest {
  string email = 1;
  string password = 2;
  string name = 3;
  optional string _id = 4;
  
}

message UserResponse {
  UserRequest user = 1;
  string error = 2;
}

message FindOneRequest {
  string _id = 1;
}

message CreateUserRequest {
  UserRequest user = 1;
}

service UserService {
  rpc findOne(FindOneRequest) returns (UserResponse);
  rpc create(CreateUserRequest) returns (UserResponse);
 
}